--- a/assets/dev/scss/frontend/frontend.scss
+++ b/assets/dev/scss/frontend/frontend.scss
@@ -4,8 +4,8 @@
 @import "breakpoints/breakpoints";
 @import "../helpers/mixins";
 
-@import "splitting/dist/splitting.css";
-@import "splitting/dist/splitting-cells.css";
+// Vendor
+@import "vendor/splitting.scss";
 
 // Common
 @import "../common/common";
