--- a/assets/css/templates/frontend-rtl.css
+++ b/assets/css/templates/frontend-rtl.css
@@ -1,6 +1,57 @@
 @charset "UTF-8";
-@import url(splitting/dist/splitting.css);
-@import url(splitting/dist/splitting-cells.css);
+/* Recommended styles for Splitting */
+.splitting .word,
+.splitting .char {
+  display: inline-block; }
+
+/* Psuedo-element chars */
+.splitting .char {
+  position: relative; }
+
+/**
+ * Populate the psuedo elements with the character to allow for expanded effects
+ * Set to `display: none` by default; just add `display: block` when you want
+ * to use the psuedo elements
+ */
+.splitting .char::before,
+.splitting .char::after {
+  content: attr(data-char);
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  transition: inherit;
+  user-select: none; }
+
+/* Expanded CSS Variables */
+.splitting {
+  /* The center word index */
+  --word-center: calc((var(--word-total) - 1) / 2);
+  /* The center character index */
+  --char-center: calc((var(--char-total) - 1) / 2);
+  /* The center character index */
+  --line-center: calc((var(--line-total) - 1) / 2); }
+
+.splitting .word {
+  /* Pecent (0-1) of the word's position */
+  --word-percent: calc(var(--word-index) / var(--word-total));
+  /* Pecent (0-1) of the line's position */
+  --line-percent: calc(var(--line-index) / var(--line-total)); }
+
+.splitting .char {
+  /* Percent (0-1) of the char's position */
+  --char-percent: calc(var(--char-index) / var(--char-total));
+  /* Offset from center, positive & negative */
+  --char-offset: calc(var(--char-index) - var(--char-center));
+  /* Absolute distance from center, only positive */
+  --distance: calc(
+     (var(--char-offset) * var(--char-offset)) / var(--char-center)
+  );
+  /* Distance from center where -1 is the far left, 0 is center, 1 is far right */
+  --distance-sine: calc(var(--char-offset) / var(--char-center));
+  /* Distance from center where 1 is far left/far right, 0 is center */
+  --distance-percent: calc((var(--distance) / var(--char-center))); }
+
 .dialog-widget-content {
   background-color: #fff;
   position: absolute;
@@ -605,6 +656,7 @@ ul.qazana-icon-list-items.qazana-inline-items {
     word-break: break-word; }
 
 .qazana-grid-item {
+  position: relative;
   word-break: break-word;
   min-width: 0; }
 
@@ -3350,6 +3402,21 @@ button.swiper-pagination-bullet {
   opacity: 0; }
   [data-custom-animations=true].qazana-animation-initialized {
     opacity: 1; }
+  [data-custom-animations=true] .qazana-widget-container {
+    position: relative; }
+
+.qazana-clipping-wrapper {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden; }
+  .qazana-clipping-wrapper .qazana-clipping-mask {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-color: red; }
 
 .qazana-shape {
   overflow: hidden;
