--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -297,6 +297,7 @@ ul.qazana-icon-list-items.qazana-inline-items {
 // Simple 12 Columns responsive grid
 
 .qazana-grid-item {
+    position: relative;
     word-break: break-word;
     min-width: 0; // Prevent columns from overflowing the grid area in Firefox browser
 }
