--- a/assets/css/hueman.css
+++ b/assets/css/hueman.css
@@ -1,3 +1,4 @@
+/*! qazana - v2.0.0 - 14-07-2019 */
 .qazana-editor-active .container .main,
 .qazana-editor-active .container .main-inner,
 .qazana-editor-preview .container .main,
